      (Closes: #708576)

  * data/common/source-fields:
    + [NT] Allow the "Dgit" field in source packages.  Thanks
      to Ian Jackson for the report.  (Closes: #721205)
  * data/rules/policy-rules:
    + [BR] New file.
  * data/scripts/{,versioned-}interpreters:
    + [NT] Apply patch from Gunnar Wolf to update which package
      is providing "rackup".  (Closes: #721268)

  * reporting/harness:
    + [NT] Fix bug that caused harness to not remove old log
      entries on incremental runs.

 -- Niels Thykier <niels@thykier.net>  Mon, 26 Aug 2013 08:19:50 +0200

lintian (2.5.17) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - apache2-unparsable-dependency
      - deprecated-configure-filename
      - doc-base-abstract-field-separator-extra-whitespace
      - doc-base-abstract-might-contain-extra-leading-whitespace
      - doc-base-file-separator-extra-whitespace
      - md5sums-lists-nonexistent-file
      - non-multi-arch-lib-dir
      - pkg-config-multi-arch-wrong-dir
    + Removed:
      - apache2-unparseable-dependency
      - doc-base-abstract-field-separator-extra-whitespaces
      - doc-base-abstract-might-contain-extra-leading-whitespaces
      - doc-base-file-separator-extra-whitespaces
      - md5sums-lists-nonexisting-file

  * checks/apache2.{desc,pm}:
    + [JW,NT] Rename a tag for consistent spelling of
      "unparsable" in tag names.  The tag has no known
      overrides.
  * checks/automake.{desc,pm}:
    + [NT] Apply patch from Gautier Minster to detect
      usage of configure.in with automake.  Thanks to
      Paul Wise for the report.  (Closes: #708482)
  * checks/cruft.pm:
    + [NT] Avoid given/when which was demoted to an
      experimental feature.  (Closes: #720835)
  * checks/files.{desc,pm}:
    + [BR] Add check for architecture pkg-config files using
      multi-arch paths but being installed in a non-multi-arch
      location.  Thanks to Ivo De Decker for the report.
      (Closes: #674469)