@@ -19,6 +19,14 @@ format
 homepage
 maintainer
 origin
+
+# Special-case, original-maintainer is not ok in Debian, but we allow
+# it in any non-Debian profile by default.
+#
+# NB: Do not rely on @if-vendor-is-not in your data files; it may
+# disappear without notice
+@if-vendor-is-not debian original-maintainer
+
 package-list
 python-version
 ruby-versions
