@@ -1,5 +1,4 @@
 # Manually maintained list of known binary fields
-#  - note the Ubuntu original-maintainer field is handled separately.
 
 package
 version
@@ -27,3 +26,10 @@ origin
 multi-arch
 built-using
 ruby-versions
+
+# Special-case, original-maintainer is not ok in Debian, but we allow
+# it in any non-Debian profile by default.
+#
+# NB: Do not rely on @if-vendor-is-not in your data files; it may
+# disappear without notice
+@if-vendor-is-not debian original-maintainer
