@@ -40,9 +40,17 @@ lintian (2.5.18) UNRELEASED; urgency=low
     + [NT] Apply patch from Gunnar Wolf to update which package
       is providing "rackup".  (Closes: #721268)
 
+  * lib/Lintian/Data.pm:
+    + [NT] Make a special case to allow "original-maintainer" by
+      default in all non-"Debian" profiles.  Thanks to Nick
+      Black for the report.  (Closes: #697565)
+
   * reporting/harness:
     + [NT] Fix bug that caused harness to not remove old log
       entries on incremental runs.
+
+  * vendors/ubuntu/main/data/{common,fields}/*:
+    + [NT] Retire now redundant files.
 
  -- Niels Thykier <niels@thykier.net>  Mon, 26 Aug 2013 08:19:50 +0200
 
